--- a/CurrencyTestTask/CurrencyTestTask.csproj
+++ b/CurrencyTestTask/CurrencyTestTask.csproj
@@ -172,6 +172,7 @@
     </Compile>
     <Compile Include="Models\Currency.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="URIHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
